Iron Gallery of Braavos/iron-db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db

spec:
  selector:
    matchLabels:
      db: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
        - image: kodekloud/irondb:2.0
          name: mariadb
          volumeMounts:
            - name: db
              mountPath: "/var/lib/mysql"
      volumes:
        - name: db
          emptyDir: {}
