Iron Gallery of Braavos/iron-gallery-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery

spec:
  selector:
    matchLabels:
      run: iron-gallery
  replicas: 1
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      containers:
        - name: iron-gallery-container
          image: 'kodekloud/irongallery:2.0'
          resources:
              limits:
                memory: 100Mi
                cpu: 50m
          volumeMounts:
            - name: config
              mountPath: '/usr/share/nginx/html/data'
            - name: images
              mountPath: '/usr/share/nginx/html/uploads'
      volumes:
        - name: config
          emptyDir: {}
        - name: images
          emptyDir: {}
